[package]
name = "Killer"
version = "0.5.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
colored = "2.1.0"
pnet = "0.35.0"
clap = { version = "4", features = ["derive"] }
locale = "0.2.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1"
killer_core = { path = "../killer_core" }

